--- a/force-app/main/default/classes/services/GauExpenditure/GauExpenditureSelector.cls
+++ b/force-app/main/default/classes/services/GauExpenditure/GauExpenditureSelector.cls
@@ -1,5 +1,7 @@
 public with sharing class GauExpenditureSelector {
-    public List<outfunds__Disbursement__c> getDisbursementsById(String disbursementId) {
+    public List<Schema.outfunds__Disbursement__c> getDisbursementsById(
+        String disbursementId
+    ) {
         return [
             SELECT
                 Id,
@@ -22,5 +24,32 @@ public with sharing class GauExpenditureSelector {
             WITH SECURITY_ENFORCED
             LIMIT 1
         ];
+    }
+
+    /**
+     * Deduce which expenditures should be deleted by querying all expenditures, and checking to see which ones are not in the list of those to be preserved.
+     * @return   return description
+     */
+    public List<Schema.GAU_Expenditure__c> getExpendituresToDelete(
+        String disbursementId,
+        Set<Id> expenditureIdsToKeep
+    ) {
+        final Set<Id> normalizedExpenditureIdsToKeep = new Set<Id>();
+        if (expenditureIdsToKeep != null) {
+            normalizedExpenditureIdsToKeep.addAll(expenditureIdsToKeep);
+        }
+
+        final List<Schema.GAU_Expenditure__c> expendituresToDelete = new List<Schema.GAU_Expenditure__c>();
+        for (Schema.GAU_Expenditure__c expenditure : [
+            SELECT Id
+            FROM GAU_Expenditure__c
+            WHERE Disbursement__c = :disbursementId
+            WITH SECURITY_ENFORCED
+        ]) {
+            if (!normalizedExpenditureIdsToKeep.contains(expenditure.Id)) {
+                expendituresToDelete.add(expenditure);
+            }
+        }
+        return expendituresToDelete;
     }
 }
